--- a/org.eclipse.jgit.pgm/pom.xml
+++ b/org.eclipse.jgit.pgm/pom.xml
@@ -60,10 +60,15 @@
     Command line client tools built on top of JGit.
   </description>
 
+  <properties>
+    <args4j.version>2.0.12</args4j.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>args4j</groupId>
       <artifactId>args4j</artifactId>
+      <version>${args4j.version}</version>
     </dependency>
 
     <dependency>
