--- a/pom.xml
+++ b/pom.xml
@@ -366,6 +366,7 @@
   <modules>
     <module>org.eclipse.jgit</module>
     <module>org.eclipse.jgit.storage.dht</module>
+    <module>org.eclipse.jgit.storage.hbase</module>
     <module>org.eclipse.jgit.ui</module>
     <module>org.eclipse.jgit.http.server</module>
     <module>org.eclipse.jgit.iplog</module>
