--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
   <groupId>org.eclipse.jgit</groupId>
   <artifactId>org.eclipse.jgit.storage.hbase</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.3.0-SNAPSHOT</version>
 
   <name>JGit - HBase Storage</name>
 
@@ -63,7 +63,7 @@
 
     <junit-version>3.8.2</junit-version>
     <args4j-version>2.0.12</args4j-version>
-    <jgit-version>1.1.0-SNAPSHOT</jgit-version>
+    <jgit-version>1.3.0.201202151440-r</jgit-version>
     <hadoop-version>1.0.3</hadoop-version>
     <hbase-version>0.92.1</hbase-version>
   </properties>
